2A/05_Projet_GL/src/test/deca/syntax/valid/Objet/52_SelectionOutMethod.deca
// Description:
//    tests de this.x dans main
//
// Resultats:
//    programme correcte syntaxiquement 
//
// Historique:
//    cree le 20/01/2024



{
    this.x = x;
}