2A/05_Projet_GL/src/test/deca/syntax/invalid/SansObjet/21_FauxMult.deca
// Description:
//    tests de programme incorrect syntaxiquement , multiplication incorrecte car pas d'opérande gauche
//
// Resultats:
//    ligne 11 : Erreur, mismatched input ';'
//
// Historique:
//    cree le 09/01/2024
{
    int x =0;
    x = 1*;
}